# Humbird

./: Cargo.toml  README.md  numbird.log.2023-09-09
html/: index.html
humbird/: Cargo.toml  README.md
humbird-bin/: Cargo.toml
humbird-bin/src/: main.rs
humbird-examples/: Cargo.toml
humbird-examples/plugins/: Cargo.toml
humbird-examples/plugins/src/: main.rs
humbird-homepage/: package.json
humbird-homepage/src/: App.tsx
humbird-jdk/: pom.xml
humbird-jdk/src/main/java/org/humbird/: Humbird.java
humbird-jdk/src/test/java/org/humbird/: HumbirdTest.java
humbird-lib/: Cargo.toml
humbird-lib/src/: lib.rs
humbird-lib/src/protocol/http/: mime.rs  mod.rs
humbird-lib/src/proxy/: proxy.rs
humbird-lib/src/server/: server.rs
humbird-plugins/: Cargo.toml  README.md
humbird-server/: Cargo.toml
humbird-server/src/: config-template.toml  main.rs  test-config.txt
humbird-server/src/cli/: cli.rs
humbird-test/: Cargo.toml
humbird-test/src/: main.rs
humbird-web/: Cargo.toml
humbird-web/src/: lib.rs
humbird/src/: lib.rs
humbird/src/config/: config.rs
humbird/src/core/: codec.rs  config.rs  event.rs  mod.rs  plugins.rs  proxy.rs  server.rs  signal.rs
humbird/src/event/: event.rs
humbird/src/macros/: console.rs  mod.rs  net.rs  server.rs  task.rs
humbird/src/plugins/: mod.rs  web.rs
humbird/src/protocol/: http.rs  mod.rs  protocol.rs
humbird/src/protocol/http/: http.rs  method.rs  mime.rs  mod.rs  request.rs  response.rs  type.rs
humbird/src/proxy/: proxy.rs
humbird/src/server/: server.rs
humbird/src/signal/: signal.rs
src/: main.rs
src/config/: config.rs
src/net/: server.rs
src/server/: http.rs  mod.rs  server.rs  signal.rs
src/server/protocol/http/: http.rs
src/test/: main.rs
