[package]
authors = ["happyboy"]
description = "a server based on humbird library"
edition = "2021"
name = "humbird-server"
version = "0.1.0"

[dependencies]
chrono = "0.4.30"
clap = {version = "4.4.1", features = ["derive"]}
humbird = {path = "../humbird"}
tokio = {version = "1", features = ["full"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3"
