[package]
authors = ["happyboy"]
description = "universal server function wrapper library"
edition = "2021"
name = "humbird"
version = "0.1.0"

[lib]
name = "humbird"

[dependencies]
clap = {version = "4.4.1", features = ["derive"]}
regex = "1.9.4"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"
chrono = "0.4.30"
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"