[package]
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "humbird network communication core library,universal server function wrapper library"
edition = "2021"
keywords = [
  "server",
  "humbird",
]
license = "GPL-3.0"
name = "humbird"
readme = "README.md"
repository = "https://github.com/0xhappyboy/Humbird/tree/main/humbird"
version = "0.1.2"

[lib]
name = "humbird"

[dependencies]
chrono = "0.4.30"
clap = {version = "4.4.1", features = ["derive"]}
lazy_static = "1.4.0"
mio = "0.8"
prettytable-rs = "0.10.0"
regex = "1.9.4"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
toml = "0.8.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3"
